upg-loadme-manifests/upg-loadme.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: upg-loadme
  namespace: kube-system
  labels:
    app: upg-loadme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upg-loadme
  template:
    metadata:
      name: upg-loadme
      labels:
        app: upg-loadme
    spec:
      containers:
        - name: upg-loadme
          # update image id (manual or via jenkins)
          # image: '8261XXXXXXXX.dkr.ecr.us-east-1.amazonaws.com/shashank-upg-loadme:1'
          image: '350465793522.dkr.ecr.us-east-1.amazonaws.com/devops-eks-capstone'
          # limiting cpu & mem usage of a pod
          resources:
            requests:
              cpu: 800m
              memory: 400Mi
            limits:
              cpu: 1000m
              memory: 400Mi
          imagePullPolicy: Always
      tolerations:
      - key: "feaster"
        operator: Equal
        value: "true"
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      # add tolerations to restrict running on selected nodes

---
kind: Service
apiVersion: v1
metadata:
  name: upg-loadme
  namespace: kube-system
spec:
  selector:
    app: upg-loadme
  type: NodePort
  ports:
  - name: app-port
    protocol: TCP
    port: 80
    targetPort: 8081
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: upg-loadme
#   namespace: kube-system
# spec:
#   selector:
#     app: upg-loadme
#   ports:
#   - port: 80
#     protocal: TCP
#     targetPort: 8081
#   type: LoadBalancer
